# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
chip8/: CMakeLists.txt
chip8/source/: chip8.c  chip8.h
docs/: Compiler.md  CompilerJourney.md  Emulator.md  EmulatorJourney.md
misc/: chip8.code-workspace
tools/compiler/: compiler.py
tools/compiler/programs/: basic.jth  test_breakout.jth
tools/compiler/tests/: test_compiler_baseline.py
tools/emulator/: CMakeLists.txt
tools/emulator/source/: emulator.cpp  emulator.h  input.cpp  input.h  main.cpp
tools/emulator/source/ui/: chip8_disassembly.cpp  chip8_inspector.cpp  chip8_ram.cpp  chip8_vram.cpp  emulator_controller.cpp  ui.h
